# rk3566_gc9a01

./: BasicDrawStrategy.cpp  BasicDrawStrategy.h  CMakeLists.txt  DMAPool.h  GC9A01Display.cpp  GC9A01Display.h  IDrawStrategy.h  IDriverDisplay.h  IGPIOInterface.h  IImageProcessor.h  ISPIInterface.h  OrangePi3BGPIO.cpp  OrangePi3BGPIO.h  OrangePi3BSPI.cpp  OrangePi3BSPI.h  README.md  RGAImageProcessor.cpp  RGAImageProcessor.h  WiringPiSPI.cpp  WiringPiSPI.h  doc.md  gc9a01.cpp  test.cpp
docs/: dma.md
tests/: CMakeLists.txt  test_draw.cpp  test_gpio.cpp  test_raw.cpp  test_rga.cpp  test_spi.cpp
tests/rga_draw/: CMakeLists.txt  test_rga_draw.cpp
tests/utils/: test_PerformanceTester.cpp
utils/: PerformanceTester.cpp  PerformanceTester.h  rga.cpp  rga.h  tmep.cpp
